<resources>
    <string name="app_name">MovieApp</string>
    <string name="movie">MOVIES</string>
    <string name="tvshow">TV SHOWS</string>
    <string name="moviepic">Movie Picture</string>
    <string name="title">Title</string>
    <string name="year">Year</string>
    <string name="score">Score</string>
    <string name="description">Overview</string>
    <string name="favorite">Favorite</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>